# Grailed_data_parsing

./: .env  .gitignore  Dockerfile  docker-compose.yaml  links4.txt  links5.txt  links6.txt  main.py  pars_list  pyproject.toml  test.py  util.txt
data/: links1_done.txt  links2_done.txt  links7_13k_done.txt  links7_done.txt  links8_14k.txt
data_parsing/database/: __init__.py
data_parsing/parsers/: helpers.py  links3.txt  links6.txt  main_parser.py
profiles/Grailed/: Local State  first_party_sets.db
profiles/Grailed/Default/: BrowsingTopicsState  DIPS  Favicons  History  Login Data  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
profiles/Grailed/Default/DawnGraphiteCache/: data_1  index
profiles/Grailed/Default/DawnWebGPUCache/: data_1  index
profiles/Grailed/Default/Extension Rules/: LOG  LOG.old
profiles/Grailed/Default/Extension Scripts/: LOG  LOG.old
profiles/Grailed/Default/Extension State/: LOG  LOG.old
profiles/Grailed/Default/GPUCache/: data_1  index
profiles/Grailed/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
profiles/Grailed/Default/Session Storage/: 000005.ldb  000008.ldb  000011.ldb  LOG  LOG.old  MANIFEST-000001
profiles/Grailed/Default/Sessions/: Session_13366032657127895  Session_13366032681718107  (+2 more)
profiles/Grailed/GrShaderCache/: data_1  f_000003  f_000005  f_000006  index
profiles/Grailed/GraphiteDawnCache/: data_1  index
profiles/Grailed/ShaderCache/: data_1  index
profiles/Grailed/segmentation_platform/: ukm_db  ukm_db-journal
(+652 files in other folders)
